{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 980,
  "lineage": "5411c1d5-1fdd-6b19-d28b-14a25c5c0827",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:785367392563:loadbalancer/app/Terraform-ALB/6f21221c51e62bd2",
            "arn_suffix": "app/Terraform-ALB/6f21221c51e62bd2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Terraform-ALB-947745733.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:785367392563:loadbalancer/app/Terraform-ALB/6f21221c51e62bd2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Terraform-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ed4884a0a1ef2d78"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-032d31d40bd82fab6"
              },
              {
                "subnet_id": "subnet-04fd2b08024106f6f"
              }
            ],
            "subnets": [
              "subnet-032d31d40bd82fab6",
              "subnet-04fd2b08024106f6f"
            ],
            "tags": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Terraform_ALB",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "tags_all": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Terraform_ALB",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "vpc_id": "vpc-066ab97e0f4ee821c",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:785367392563:listener/app/Terraform-ALB/6f21221c51e62bd2/aeaa7e2d91e19424",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:785367392563:targetgroup/ALB-TG/5939f843e8e59ada",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:785367392563:listener/app/Terraform-ALB/6f21221c51e62bd2/aeaa7e2d91e19424",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:785367392563:loadbalancer/app/Terraform-ALB/6f21221c51e62bd2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.this",
            "aws_alb_target_group.this",
            "aws_security_group.alb",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:785367392563:targetgroup/ALB-TG/5939f843e8e59ada",
            "arn_suffix": "targetgroup/ALB-TG/5939f843e8e59ada",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:785367392563:targetgroup/ALB-TG/5939f843e8e59ada",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-066ab97e0f4ee821c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e41f186890fa3f27",
            "arn": "arn:aws:ec2:us-east-1:785367392563:instance/i-0ca082035a65eb508",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca082035a65eb508",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0594cedc79042b02a",
            "private_dns": "ip-192-168-4-39.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.4.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f9d30bb0d20f21a5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07062a9b5019f0a78",
            "tags": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Maquina jenkins",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "tags_all": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Maquina jenkins",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-016fea28c138a41e8"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins",
            "aws_security_group.web",
            "aws_subnet.this",
            "aws_vpc.this",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785367392563:internet-gateway/igw-0746b288ff1807285",
            "id": "igw-0746b288ff1807285",
            "owner_id": "785367392563",
            "tags": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Terraform IG",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "tags_all": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Terraform IG",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "vpc_id": "vpc-066ab97e0f4ee821c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785367392563:route-table/rtb-0b4fcce1ef2329d98",
            "id": "rtb-0b4fcce1ef2329d98",
            "owner_id": "785367392563",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Terraform Private",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "tags_all": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Terraform Private",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "timeouts": null,
            "vpc_id": "vpc-066ab97e0f4ee821c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785367392563:route-table/rtb-09fc813deabccf0f2",
            "id": "rtb-09fc813deabccf0f2",
            "owner_id": "785367392563",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0746b288ff1807285",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Terraform Public",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "tags_all": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Terraform Public",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "timeouts": null,
            "vpc_id": "vpc-066ab97e0f4ee821c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Private A",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9a5f2d2ac3deab9",
            "route_table_id": "rtb-0b4fcce1ef2329d98",
            "subnet_id": "subnet-0096639c07b21b7a3"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Private B",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a225ce9f62240206",
            "route_table_id": "rtb-0b4fcce1ef2329d98",
            "subnet_id": "subnet-07062a9b5019f0a78"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Public A",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065054ece0ce39a5d",
            "route_table_id": "rtb-09fc813deabccf0f2",
            "subnet_id": "subnet-04fd2b08024106f6f"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Public B",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0787acc5e44a434d9",
            "route_table_id": "rtb-09fc813deabccf0f2",
            "subnet_id": "subnet-032d31d40bd82fab6"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785367392563:security-group/sg-0ed4884a0a1ef2d78",
            "description": "Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed4884a0a1ef2d78",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "AWS-LOAD-BALANCER",
            "name_prefix": "",
            "owner_id": "785367392563",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Load Balancer",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "tags_all": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Load Balancer",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "timeouts": null,
            "vpc_id": "vpc-066ab97e0f4ee821c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "autoscaling",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785367392563:security-group/sg-02546df8f192d997b",
            "description": "lb ssh e http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02546df8f192d997b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ed4884a0a1ef2d78"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "autoscaling",
            "name_prefix": "",
            "owner_id": "785367392563",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "AutoScaling",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "tags_all": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "AutoScaling",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "timeouts": null,
            "vpc_id": "vpc-066ab97e0f4ee821c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785367392563:security-group/sg-03a0c41eeeaa3334a",
            "description": "conexoes do banco vindas de fora",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-03a0c41eeeaa3334a",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057568fc05d37496d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DataBase",
            "name_prefix": "",
            "owner_id": "785367392563",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Servidor MYSQL",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "tags_all": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Servidor MYSQL",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "timeouts": null,
            "vpc_id": "vpc-066ab97e0f4ee821c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785367392563:security-group/sg-016fea28c138a41e8",
            "description": "conexoes vindas da maquina do jenkins",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057568fc05d37496d"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-016fea28c138a41e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins",
            "name_prefix": "",
            "owner_id": "785367392563",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "maquina jenkins",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "tags_all": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "maquina jenkins",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "timeouts": null,
            "vpc_id": "vpc-066ab97e0f4ee821c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785367392563:security-group/sg-057568fc05d37496d",
            "description": "trafego aberto vindo de fora",
            "egress": [
              {
                "cidr_blocks": [
                  "192.168.3.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-057568fc05d37496d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web",
            "name_prefix": "",
            "owner_id": "785367392563",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Servidor Web",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "tags_all": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Servidor Web",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "timeouts": null,
            "vpc_id": "vpc-066ab97e0f4ee821c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785367392563:subnet/subnet-04fd2b08024106f6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fd2b08024106f6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "785367392563",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Public A",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "tags_all": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Public A",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "vpc_id": "vpc-066ab97e0f4ee821c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pub_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785367392563:subnet/subnet-032d31d40bd82fab6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032d31d40bd82fab6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "785367392563",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Public B",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "tags_all": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Public B",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "vpc_id": "vpc-066ab97e0f4ee821c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pvt_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785367392563:subnet/subnet-0096639c07b21b7a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0096639c07b21b7a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "785367392563",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Private A",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "tags_all": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Private A",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "vpc_id": "vpc-066ab97e0f4ee821c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pvt_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785367392563:subnet/subnet-07062a9b5019f0a78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07062a9b5019f0a78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "785367392563",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Private B",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "tags_all": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Private B",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "vpc_id": "vpc-066ab97e0f4ee821c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785367392563:vpc/vpc-066ab97e0f4ee821c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0ef398b89724705ca",
            "default_route_table_id": "rtb-006517b65a12111be",
            "default_security_group_id": "sg-0d41f42e45c0e6d55",
            "dhcp_options_id": "dopt-067513d0aa808967b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-066ab97e0f4ee821c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-006517b65a12111be",
            "owner_id": "785367392563",
            "tags": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Terraform VPC",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            },
            "tags_all": {
              "CreatedAt": "2022-03-15",
              "ManagedBy": "Terraform",
              "Name": "Terraform VPC",
              "Owner": "Cassius",
              "Service": "Auto Scaling App",
              "project": "Minicurso AWS-TERRAFORM"
            }
          }
        }
      ]
    }
  ]
}